tests/compile_fail/invalid_counter_name_literal.rs
use surgeist_style::CounterName;

fn main() {
    let _name = CounterName {
        value: String::from("section"),
    };
}
