tests/compile_fail/invalid_counter_name_literal.stderr
error[E0451]: field `value` of struct `CounterName` is private
 --> tests/compile_fail/invalid_counter_name_literal.rs:5:9
  |
4 |     let _name = CounterName {
  |                 ----------- in this type
5 |         value: String::from("section"),
  |         ^^^^^ private field
